Add navbar to homepage

--- a/tutor/templates/blog/discussions.html
+++ b/tutor/templates/blog/discussions.html
@@ -89,7 +89,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('tutor.c') }}">Learn C <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ url_for('tutor.c') }}">Learn C</a>
           </li>
           <li class="nav-item right-end">
             <a class="nav-link" href="#">Logout</a>
