--- a/tutor/templates/auth/home.html
+++ b/tutor/templates/auth/home.html
@@ -3,12 +3,14 @@
 	<head>
 		<meta charset="utf-8">
 		<title>GPREC Code Tutor</title>
-		<link rel="stylesheet" href="{{ url_for('static', filename='') }}">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ url_for('static', filename='') }}">
 		<style media="screen">
 		/* ---- reset ---- */
 			body{
 				margin:0;
 				font:normal 75% Arial, Helvetica, sans-serif;
+				overflow-y: hidden;
 			}
 			canvas{
 				display: block;
@@ -20,7 +22,7 @@
 				width: 100%;
 				height: 100%;
 				background-color: #ffffff;
-				background-image: url("static/banner2.png");
+				background-image: url("static/banner.png");
 				background-repeat: no-repeat;
 				background-size: cover;
 				background-position: 50% 50%;
@@ -54,21 +56,47 @@
 			.count-particles{
 				border-radius: 0 0 3px 3px;
 			}
+			.nav-link {
+				font-size: 30px;
+			}
+			.nav {
+				padding: 25px;
+			}
+			.links {
+				position: relative;
+				left: 90%;
+				font-size: 1.75em;
+			}
+			a {
+				text-decoration: none !important;
+				margin-right: 0.94em;
+			}
 		</style>
 	</head>
-	<body onload="typeWriter()">
+	<body>
 		<!-- particles.js container -->
 		<div id="particles-js">
+			<div class="nav">
+				<div class="links">
+					<a href="{{url_for('tutor.register')}}"> Sign Up </a>
+					<a href="{{url_for('tutor.login')}}"> Login </a>
+				</div>
+			</div>
 		</div>
 		<script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 		<script type="text/javascript">
-			particlesJS("particles-js",
-			{"particles":{"number":{"value":6,"density":{"enable":true,"value_area":800}},"color":{"value":"#0077b3"},
-			"shape":{"type":"polygon","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":6},"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.3,"random":true,
-			"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},"size":{"value":64.09640098708464,"random":false,"anim":{"enable":true,"speed":10,"size_min":40,"sync":false}},"line_linked":{"enable":false,"distance":200,
-			"color":"#ffffff","opacity":1,"width":2},"move":{"enable":true,"speed":8,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},
-			"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},"onclick":{"enable":false,"mode":"bubble"},"resize":true},"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},
-			"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
+			particlesJS("particles-js", {"particles":{"number":{"value":12,"density":{"enable":true,"value_area":800}},
+			"color":{"value":"#0077b3"},"shape":{"type":"polygon","stroke":{"width":0,"color":"#000"},"polygon":{"nb_sides":6},
+			"image":{"src":"img/github.svg","width":100,"height":100}},"opacity":{"value":0.3,"random":true,
+			"anim":{"enable":false,"speed":1,"opacity_min":0.1,"sync":false}},
+			"size":{"value":64,"random":false,"anim":{"enable":true,"speed":10,"size_min":40,"sync":false}},
+			"line_linked":{"enable":false,"distance":200,"color":"#ffffff","opacity":1,"width":2},
+			"move":{"enable":true,"speed":8,"direction":"none","random":false,"straight":false,"out_mode":"out","bounce":false,
+			"attract":{"enable":false,"rotateX":600,"rotateY":1200}}},
+			"interactivity":{"detect_on":"canvas","events":{"onhover":{"enable":false,"mode":"grab"},
+			"onclick":{"enable":false,"mode":"push"},"resize":true},
+			"modes":{"grab":{"distance":400,"line_linked":{"opacity":1}},"bubble":{"distance":400,"size":40,"duration":2,"opacity":8,"speed":3},
+			"repulse":{"distance":200,"duration":0.4},"push":{"particles_nb":4},"remove":{"particles_nb":2}}},"retina_detect":true});
 		</script>
 	</body>
 </html>
