--- a/tutor/templates/auth/newC.html
+++ b/tutor/templates/auth/newC.html
@@ -150,7 +150,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="nav navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="{{ url_for('tutor.index') }}">Discussions <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{{ url_for('tutor.index') }}">Discussions</a>
           </li>
           <li class="nav-item right-end">
             <a class="nav-link" href="{{ url_for('tutor.logout') }}">Logout</a>
