--- a/tutor/templates/auth/login.html
+++ b/tutor/templates/auth/login.html
@@ -137,7 +137,7 @@
 		<br><br><br><br>
 		<br>
 		<br><br><br>
-		<h1 class = "w3-center hello">New to Codiac?</h1>
+		<h1 class = "w3-center hello">New to Code Tutor?</h1>
 		<p class = "w3-center hellomsg">Sign Up to start exploring</p>
 		<br>
 		<p class = "w3-center"><a class = "w3-center register" href = "{{ url_for ('tutor.register') }}">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sign Up&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a></p>
